--- a/app/src/main/res/layout/activity_recordermain.xml
+++ b/app/src/main/res/layout/activity_recordermain.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/white" >
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,6 +17,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:orientation="vertical" >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/title_height">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/iv_top_logo"/>
+            </FrameLayout>
             <RelativeLayout
                 android:id="@+id/titleHead"
                 android:layout_width="fill_parent"
@@ -25,14 +34,6 @@
                 android:background="#000000"
                 android:gravity="center"
                 android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textColor="@color/text_color_gray3"
-                    android:text="行车记录"
-                    android:textSize="17sp"/>
 
                 <ImageView
                     android:id="@+id/recordermain_img_set"
