--- a/app/src/main/res/layout/activity_car_tire_pressure.xml
+++ b/app/src/main/res/layout/activity_car_tire_pressure.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/layout_background"
-    android:orientation="vertical"
-    android:paddingTop="4dip" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/layout_background"
+                android:orientation="vertical"
+                android:paddingTop="4dip">
 
     <include
         android:id="@+id/sub_head"
-        layout="@layout/head_sub1" />
+        layout="@layout/head_sub1"/>
 
     <RelativeLayout
         android:id="@+id/activity_car_tire_pressure_bottom"
@@ -18,7 +18,7 @@
         android:background="@drawable/bottom_sharing_bg"
         android:paddingLeft="10dip"
         android:paddingRight="10dip"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/activity_car_tire_pressure_img_activate"
@@ -28,7 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="3dip"
             android:paddingTop="3dip"
-            android:src="@drawable/tire_pressure_activate" />
+            android:src="@drawable/tire_pressure_activate"/>
 
         <TextView
             android:id="@+id/activity_car_tire_pressure_txt_activate"
@@ -40,7 +40,7 @@
             android:paddingTop="3dip"
             android:text=""
             android:textColor="@color/text_color_gray1"
-            android:textSize="@dimen/text_size_small" />
+            android:textSize="@dimen/text_size_small"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -50,7 +50,7 @@
         android:layout_alignParentBottom="true"
         android:paddingLeft="15dip"
         android:paddingRight="15dip"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/activity_car_tire_pressure_txt_progress"
@@ -59,7 +59,7 @@
             android:gravity="center_horizontal"
             android:text="激活进度："
             android:textColor="@color/text_color_gray3"
-            android:textSize="@dimen/text_size_small_s1" />
+            android:textSize="@dimen/text_size_small_s1"/>
 
         <ProgressBar
             android:id="@+id/activity_car_tire_pressure_progress"
@@ -70,7 +70,7 @@
             android:max="100"
             android:maxHeight="5.5dip"
             android:minHeight="5.5dip"
-            android:progressDrawable="@drawable/career_progress_bg" />
+            android:progressDrawable="@drawable/career_progress_bg"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -79,17 +79,20 @@
         android:layout_height="fill_parent"
         android:layout_above="@id/activity_car_tire_pressure_bottom"
         android:layout_below="@id/sub_head"
+        android:layout_marginBottom="15dp"
         android:layout_marginTop="10dip"
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
-        android:visibility="visible"
-        android:layout_marginBottom="15dp" >
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/activity_car_tire_pressure_img"
-            style="@style/public_img"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/icon_car" >
+            android:layout_margin="5dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/icon_car">
         </ImageView>
 
         <com.carlt.sesame.ui.view.TirePressureView
@@ -97,28 +100,28 @@
             style="@style/car_tire_prssure_lay"
             android:layout_alignTop="@id/activity_car_tire_pressure_img"
             android:layout_marginTop="15dip"
-            android:layout_toLeftOf="@id/activity_car_tire_pressure_img" />
+            android:layout_toLeftOf="@id/activity_car_tire_pressure_img"/>
 
         <com.carlt.sesame.ui.view.TirePressureView
             android:id="@+id/activity_car_tire_pressure_lay2"
             style="@style/car_tire_prssure_lay"
             android:layout_alignTop="@id/activity_car_tire_pressure_img"
             android:layout_marginTop="15dip"
-            android:layout_toRightOf="@id/activity_car_tire_pressure_img" />
+            android:layout_toRightOf="@id/activity_car_tire_pressure_img"/>
 
         <com.carlt.sesame.ui.view.TirePressureView
             android:id="@+id/activity_car_tire_pressure_lay3"
             style="@style/car_tire_prssure_lay"
             android:layout_alignBottom="@id/activity_car_tire_pressure_img"
             android:layout_marginBottom="15dip"
-            android:layout_toLeftOf="@id/activity_car_tire_pressure_img" />
+            android:layout_toLeftOf="@id/activity_car_tire_pressure_img"/>
 
         <com.carlt.sesame.ui.view.TirePressureView
             android:id="@+id/activity_car_tire_pressure_lay4"
             style="@style/car_tire_prssure_lay"
             android:layout_alignBottom="@id/activity_car_tire_pressure_img"
             android:layout_marginBottom="15dip"
-            android:layout_toRightOf="@id/activity_car_tire_pressure_img" />
+            android:layout_toRightOf="@id/activity_car_tire_pressure_img"/>
     </RelativeLayout>
 
 </RelativeLayout>
