--- a/app/src/main/res/layout/activity_manage_pie.xml
+++ b/app/src/main/res/layout/activity_manage_pie.xml
@@ -21,6 +21,7 @@
 
             <RelativeLayout
                 android:id="@+id/manage_pie_lay_name"
+                android:visibility="gone"
                 style="@style/setting_layout1" >
 
                 <TextView
@@ -47,7 +48,8 @@
                     android:text="" />
             </RelativeLayout>
 
-            <View style="@style/line_setpie_h" />
+            <View style="@style/line_setpie_h"
+                  android:visibility="gone"/>
 
             <RelativeLayout
                 android:id="@+id/manage_pie_lay_delete"
@@ -83,6 +85,7 @@
                 android:visibility="gone" />
 
             <RelativeLayout
+                android:visibility="gone"
                 android:id="@+id/manage_pie_lay_psw"
                 style="@style/setting_layout1" >
 
@@ -111,11 +114,14 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <View style="@style/line_setting_h" />
+        <View style="@style/line_setting_h"
+              android:visibility="gone"/>
 
         <View
             style="@style/line_setting_h"
-            android:layout_marginTop="15dip" />
+            android:layout_marginTop="15dip"
+            android:visibility="gone"/>
+
 
         <LinearLayout
             android:layout_width="fill_parent"
