--- a/app/src/main/res/layout/fragment_medialist.xml
+++ b/app/src/main/res/layout/fragment_medialist.xml
@@ -19,4 +19,11 @@
             android:divider="#ff0000"
             android:dividerHeight="10dp" />
     </android.support.v4.widget.SwipeRefreshLayout>
+    <include
+        layout="@layout/layout_nodata"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        />
+
 </RelativeLayout>
