--- a/app/src/main/res/layout/activity_video_fream.xml
+++ b/app/src/main/res/layout/activity_video_fream.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
      >
 
+
     <RelativeLayout
         android:id="@+id/videoLayout"
         android:layout_width="match_parent"
@@ -131,4 +132,14 @@
             android:textColor="#fff"
         ></TextView>
 
+    <TextView
+        android:id="@+id/video_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+
+        />
 </RelativeLayout>
