--- a/app/src/main/res/layout/activity_medialist.xml
+++ b/app/src/main/res/layout/activity_medialist.xml
@@ -149,7 +149,7 @@
                 android:gravity="center"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
-                android:text="连接摄像头Wi-Fi"
+                android:text="连接记录仪Wi-Fi"
                 android:textColor="@color/txt_color_connectwifi"
                 android:textSize="14sp" />
         </LinearLayout>
