--- a/app/src/main/res/layout/activity_video_fream.xml
+++ b/app/src/main/res/layout/activity_video_fream.xml
@@ -43,6 +43,38 @@
             android:layout_marginTop="15dp"
             />
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl_video_load_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00000000"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/tv_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="视屏加载失败"
+            android:layout_centerInParent="true"
+            android:textSize="15sp"
+            android:textColor="#fff"
+            />
+        <Button
+            android:id="@+id/btn_video_error"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:textSize="15sp"
+            android:text="重试"
+            android:layout_below="@+id/tv_error"
+            android:layout_centerHorizontal="true"
+            android:textColor="#fff"
+            android:layout_marginTop="10dp"
+            android:onClick="onClick"
+            android:background="@drawable/video_fream_video_error_btn_bg"
+
+            />
+    </RelativeLayout>
     
     <LinearLayout
         android:id="@+id/player_imgLay"
@@ -52,7 +84,7 @@
         android:layout_marginTop="20dp"
         android:background="#ffffff"
         android:padding="1dp"
-        android:visibility="gone" 
+        android:visibility="gone"
         >
 
         <ImageView
