--- a/app/src/main/res/layout/dialog_upgrading.xml
+++ b/app/src/main/res/layout/dialog_upgrading.xml
@@ -11,18 +11,18 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:layout_above="@+id/dialog_upgrade_gif_bg"
+        android:layout_above="@+id/line"
         android:gravity="center|bottom"
         android:textColor="#333"
         android:textSize="18sp" />
 
-    <com.carlt.chelepie.view.gif.GifView
-        android:id="@+id/dialog_upgrade_gif_bg"
-        android:layout_width="65dp"
-        android:layout_height="40dp"
-        android:layout_above="@+id/line"
-        android:visibility="visible"
-        android:layout_centerHorizontal="true"/>
+    <!--<com.carlt.chelepie.view.gif.GifView-->
+        <!--android:id="@+id/dialog_upgrade_gif_bg"-->
+        <!--android:layout_width="65dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_above="@+id/line"-->
+        <!--android:visibility="visible"-->
+        <!--android:layout_centerHorizontal="true"/>-->
         <!--gif:delay="1"-->
         <!--gif:src="@raw/icon_upgrading"-->
         <!--gif:stop="true" -->
