--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -420,10 +420,9 @@
                 android:id="@+id/btn_sign_out"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
-                android:layout_marginBottom="18dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:layout_marginTop="77dip"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/login_out_btn_bg"
                 android:gravity="center"
                 android:text="@string/logout_txt"
